Remove synchronization in favor of single-threaded pool.